<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:background="@drawable/gradient_color"
    android:id="@+id/register_activity"
    android:layout_height="match_parent"
    tools:context=".Activity.RegisterActivity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/themecolor"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lobster"
            android:gravity="center"
            android:text="Start With Profile"
            android:textColor="@color/white"
            android:textSize="30dp" />

    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="1dp"
        android:id="@+id/id_profile_pic"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="65dp"
        android:background="@drawable/profile_image"
        android:src="@mipmap/ic_camera_icon"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="50dp"
                android:layout_marginTop="120dp"
                android:background="@drawable/card_view_white">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/themecolor">

                    <EditText
                        android:id="@+id/id_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:backgroundTint="@color/themecolor"
                        android:ems="10"
                        android:textColor="@color/themecolor_dark"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="Enter Name"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:textColorHint="@color/themecolor"
                    android:layout_marginTop="70dp">

                    <EditText
                        android:id="@+id/id_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:backgroundTint="@color/themecolor"
                        android:ems="10"
                        android:textColor="@color/themecolor_dark"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="Enter Email Id"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:textColorHint="@color/themecolor"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="125dp">

                    <EditText
                        android:id="@+id/id_qualification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:backgroundTint="@color/themecolor"
                        android:ems="10"
                        android:textColor="@color/themecolor_dark"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="Enter Qualification"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColorHint="@color/themecolor"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="180dp">

                    <EditText
                        android:id="@+id/id_Designation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:backgroundTint="@color/themecolor"
                        android:ems="10"
                        android:textColor="@color/themecolor_dark"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="Enter Designation"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textColorHint="@color/themecolor"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="235dp">

                    <EditText
                        android:id="@+id/id_contact_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:maxLength="10"
                        android:backgroundTint="@color/themecolor"
                        android:ems="10"
                        android:textColor="@color/themecolor_dark"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="Enter Contact No."
                        android:inputType="phone"
                        android:paddingLeft="5dp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="50dp"
                    android:id="@+id/password_textlayout"
                    android:textColorHint="@color/themecolor"
                    android:layout_marginRight="10dp"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="285dp">

                    <EditText
                        android:id="@+id/id_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:backgroundTint="@color/themecolor"
                        android:ems="10"
                        android:textColor="@color/themecolor_dark"
                        android:fontFamily="sans-serif-condensed"
                        android:hint="Password"
                        android:inputType="textPersonName"
                        android:paddingLeft="5dp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/id_signup_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="2dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_below="@id/password_textlayout"
                    android:background="@drawable/button_theme"
                    android:text="Submit For Verification"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/user_name"
                    android:layout_width="23dp"
                    android:layout_height="25dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="38dp"
                    app:srcCompat="@drawable/ic_user_name"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="23dp"
                    android:layout_height="26dp"
                    android:layout_alignLeft="@+id/user_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/user_name"
                    android:layout_marginTop="93dp"
                    app:srcCompat="@drawable/ic_email_fill"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="23dp"
                    android:layout_height="22dp"
                    android:layout_alignLeft="@+id/user_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignStart="@+id/user_name"
                    android:layout_marginTop="149dp"
                    app:srcCompat="@drawable/ic_qualificatin"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:layout_alignLeft="@+id/user_name"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="203dp"
                    app:srcCompat="@drawable/ic_designation"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="23dp"
                    android:layout_height="28dp"
                    android:layout_below="@+id/imageView5"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="28dp"
                    app:srcCompat="@drawable/ic_smartphone_call"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="23dp"
                    android:layout_height="32dp"
                    android:layout_alignLeft="@+id/user_name"
                    android:layout_alignStart="@+id/user_name"
                    android:layout_below="@+id/imageView10"
                    android:layout_marginTop="22dp"
                    app:srcCompat="@drawable/ic_password"
                    tools:ignore="VectorDrawableCompat" />

            </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
</ScrollView>
