<resources>
    <string name="app_name">Publisher</string>
    <string name="continue_as_guest">Continue As Guest</string>
    <string name="enter">Enter PNG</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_admin__workshop__detail">Workshop Attendance Detail</string>
    <string name="tab_text_1">Report</string>
    <string name="tab_text_2">Attend</string>
    <string name="tab_text_3">Non-Attend</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="success">success</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin__workshop__report">Admin_Workshop_ReportActivity</string>
</resources>
